crates/rome_diagnostics/tests/macros/tags_comma.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
#[diagnostic(tags(Identifier, Identifier))]
struct TestDiagnostic {}

fn main() {}
